--- a/Robot/Driver/Cargo.toml
+++ b/Robot/Driver/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+libc = "0.2.79"
+gpio = "0.4.1"
+tmc2209 = "0.1.0"
