--- a/Slicer/Cargo.toml
+++ b/Slicer/Cargo.toml
@@ -9,3 +9,6 @@ edition = "2018"
 [dependencies]
 svg = "0.8.0"
 string-builder = "0.2.0"
+line_intersection = "0.4.0"
+geo = "0.4.0"
+num-traits = "0.1"
