Fixed launch.json file to allow for debugging with LLDB on linux

--- a/Slicer/.vscode/launch.json
+++ b/Slicer/.vscode/launch.json
@@ -19,7 +19,14 @@
                     "kind": "bin"
                 }
             },
-            "args": [],
+            "args": [
+                "-fimage.svg",
+                "-oout",
+                "-afalse",
+                "-x100",
+                "-h50",
+                "-w50"
+            ],
             "cwd": "${workspaceFolder}"
         },
         {
