--- a/Slicer/Cargo.toml
+++ b/Slicer/Cargo.toml
@@ -15,3 +15,5 @@ indicatif = "0.15.0"
 clap = "2.33.3"
 quick-xml = "0.20.0"
 regex = "1.4.2"
+serde = {version = "1.0.123", features = ["derive"]}
+serde_json = "1.0.62"
