--- a/GCodeRenderer/Cargo.toml
+++ b/GCodeRenderer/Cargo.toml
@@ -12,3 +12,5 @@ png = "0.16.8"
 indicatif = "0.15.0"
 threadpool = "1.8.1"
 string-builder = "0.2.0"
+serde = {version = "1.0.123", features = ["derive"]}
+serde_json = "1.0.62"
